# DiracWMC

./: .gitignore  README.md  TODO.md  generate_random.py  ising_experiment.py  main.py  main_old.py  notes.md  output.cnf  pytest.ini  quantum_ising_experiment.py  requirements.txt  test.py  test.txt  test2.py
app/: __main__.py  (+4 more)
wcnf_matrix/: .gitignore  Makefile  README.md  example.py  pyproject.toml  setup.py
wcnf_matrix/docs/solvers/: DPMC.md
wcnf_matrix/examples/: example1.py  example2.py  example3.py  example4.py  example5.py  example6.py  example7.py
wcnf_matrix/tests/: test_cnf.py  test_concrete_matrix.py  test_index.py  test_matrix.py  test_wcnf_matrix.py  test_weight_func.py  test_x.py
wcnf_matrix/wcnf_matrix/: __init__.py  index.py  reg.py
wcnf_matrix/wcnf_matrix/cnf/: __init__.py  boolvar.py  cnf.py  weights.py
wcnf_matrix/wcnf_matrix/cnf/model_counter/: __init__.py  cachet.py  config.py  dpmc.py  formats.py  model_counter.py  tensororder.py
wcnf_matrix/wcnf_matrix/cnf/model_counter/solver/DPMC/: Dockerfile  add_include.py  run_solver.py
wcnf_matrix/wcnf_matrix/cnf/model_counter/solver/TensorOrder/: Dockerfile  fix_files.py  run_solver.py
wcnf_matrix/wcnf_matrix/cnf/model_counter/solver/cachet/: Dockerfile  fix_missing.py  run_solver.py
wcnf_matrix/wcnf_matrix/cnf/tests/: test_cnf.py  test_weights.py
wcnf_matrix/wcnf_matrix/matrix/: __init__.py  abstractmatrix.py  basicmatrix.py  concretematrix.py  labelmatrix.py  wcnf_matrix.py
wcnf_matrix/wcnf_matrix/matrix/varrep/: __init__.py  logvarrep.py  onehotvarrep.py  ordervarrep.py  varrep.py
(+133 files in other folders)
